--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@trpc/next": "^11.0.0-rc.351",
     "@trpc/react-query": "^11.0.0-rc.351",
     "@trpc/server": "^11.0.0-rc.351",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.373.0",
     "next": "14.2.2",
+    "next-seo": "^6.5.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
